--- a/gui/package.json
+++ b/gui/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-semantic-ui-range": "^0.7.1",
+    "react-xarrows": "^2.0.2",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
     "web-vitals": "^2.1.4"
