--- a/gui/package.json
+++ b/gui/package.json
@@ -4,21 +4,14 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^4.4.1",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "react-semantic-ui-range": "^0.7.1",
     "react-xarrows": "^2.0.2",
     "semantic-ui-css": "^2.5.0",
-    "semantic-ui-react": "^2.1.5",
-    "web-vitals": "^2.1.4"
+    "semantic-ui-react": "^2.1.5"
   },
   "scripts": {
     "start": "vite dev",
@@ -37,10 +30,16 @@
     ]
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.26.0",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
-    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.31.1",
+    "@typescript-eslint/parser": "^8.31.1",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react": "^7.37.5",
+    "globals": "^16.0.0",
     "typescript": "^5.8.3",
     "vite": "^6.3.4"
   }
