--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "electron .",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start-gui": "cd gui && pnpm start",
-    "build": "cd gui && pnpm run build && cd .. && electron-builder --win --x64"
+    "build": "cd gui && pnpm build && cd .. && electron-builder --win --x64"
   },
   "author": "Fuyuki",
   "license": "MIT",
