build: UI designer

--- a/gui/package.json
+++ b/gui/package.json
@@ -5,10 +5,15 @@
   "homepage": ".",
   "dependencies": {
     "@vitejs/plugin-react": "^4.4.1",
+    "konva": "^9.3.20",
     "react": "^18.2.0",
+    "react-color": "^2.19.3",
+    "react-contexify": "^6.0.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.2.0",
+    "react-konva": "^18.2.0",
+    "react-rnd": "^10.5.2",
     "react-xarrows": "^2.0.2",
     "semantic-ui-react": "^2.1.5"
   },
